java-spring: onRequestSelectDocument / setRequestedDocument add mapping fix